# polimi-ds

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  start.py
docs/: messages.md
docs/sequence diagrams/txt/: Read.txt  Write.txt
src/client/: ClientOperation.cpp  ClientOperation.h  Makefile  main.cpp
src/client/internal/: Client.cpp  Client.h  ClientConfig.cpp  ClientConfig.h  ClientConnectionHandler.cpp  ClientConnectionHandler.h  ClientMessage.h
src/client/internal/messages/: ClientGet.cpp  ClientPut.cpp
src/common/: Message.cpp  Message.h  Regex.cpp  Regex.h  RegexMismatchException.cpp  RegexMismatchException.h
src/common/messages/: Ack.cpp  Nack.cpp  Value.cpp
src/server/: Makefile  ServerOperation.cpp  ServerOperation.h  main.cpp
src/server/internal/: Coordinator.cpp  Coordinator.h  DatastoreManager.cpp  DatastoreManager.h  Logger.cpp  Logger.h  Participant.cpp  Participant.h  Replica.cpp  Replica.h  ServerConfig.cpp  ServerConfig.h  ServerMessage.cpp  ServerMessage.h
src/server/internal/connectivity/: Connection.cpp  ReplicaConnectionHandler.cpp  ReplicaConnectionHandler.h
src/server/internal/messages/: Fetch.cpp  FetchedValue.cpp  Get.cpp  GlobalAbort.cpp  GlobalCommit.cpp  Prepare.cpp  Put.cpp  Repair.cpp  Sync.cpp  Update.cpp  VoteAbort.cpp  VoteCommit.cpp
tests/: ClientServerTests.cpp
tests/config/: client.yaml  server.yaml
